--- a/FRONT/src/styles/card.css
+++ b/FRONT/src/styles/card.css
@@ -1,17 +1,19 @@
 .card {
-  width: 250px;
+  width: 277px;
   border: 1px solid #ddd;
   border-radius: 12px;
   overflow: hidden;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  font-family: sans-serif;
-  background-color: #fff;
+  background-color: rgb(226, 232, 240);
+   display: flex;
+  flex-direction: column;
 }
 
 .card-image {
   position: relative;
-  height: 160px;
+  height: 300px;
   overflow: hidden;
+  background-color: #fff;
 }
 
 .card-image img {
@@ -41,13 +43,20 @@
 }
 
 .card-content {
+  
+    display: flex;
+  gap: 15px;
+  flex: 1;
+  flex-direction: column;
+  justify-content: space-between;
   padding: 12px;
+  gap: 15px;
 }
 
 .title {
   margin: 0;
-  font-size: 16px;
-  font-weight: bold;
+  font-size: 20px;
+  font-weight: 500;
   color: #222;
 }
 
@@ -57,8 +66,25 @@
   margin: 8px 0;
 }
 
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
+  /* padding: 16px; */
+}
+
+.card-content-price {
+  display: flex;
+  justify-content: space-between;
+  align-self: end;
+  font-weight: 500;
+    margin-top: auto; 
+
+}
+
 .price {
-  font-size: 16px;
-  font-weight: bold;
-  color: #28a745;
+  font-size: 24px;
+  font-weight: 500;
+  color: #000;
 }
