--- a/FRONT/src/styles/home.css
+++ b/FRONT/src/styles/home.css
@@ -119,7 +119,7 @@ body {
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .about-background-image-container {
@@ -133,13 +133,15 @@ body {
 .about-section-image-container {
   flex: 0.9;
   margin-right: 1rem;
+  max-width: 500px;
 }
 
 .about-section-text-container {
-  flex: 1;
-  justify-content: center;
+  /* flex: 1; */
+  /* justify-content: center; */
   display: flex;
   flex-direction: column;
+  align-self: center;
 }
 
 .primary-subheading {
@@ -175,10 +177,6 @@ body {
 }
 
 @media (max-width: 1000px) {
-  .navbar-links-container a {
-    margin-right: 1rem;
-    font-size: 1rem;
-  }
   .primary-button {
     font-size: 1rem;
   }
@@ -187,26 +185,19 @@ body {
   }
 }
 @media (max-width: 800px) {
-  .nav-logo-container {
-    max-width: 140px;
-  }
-  .navbar-links-container {
-    display: none;
-  }
-  .navbar-menu-container {
-    display: flex;
-  }
   .home-bannerImage-container {
     max-width: 450px;
   }
   .home-banner-container,
   .about-section-container {
-    flex-direction: column-reverse;
+    flex-direction: column-reverse; 
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
   }
   .about-section-container {
     flex-direction: column;
+    justify-content: center;
+    align-content: center;
   }
   .home-image-section,
   .about-section-image-container {
@@ -234,6 +225,7 @@ body {
   }
   .about-section-container {
     margin-top: 5rem !important;
+    justify-content: center;
   }
   .about-buttons-container {
     justify-content: center;
@@ -253,35 +245,9 @@ body {
   .about-section-image-container {
     margin-right: 0rem !important;
   }
-  .work-section-wrapper {
-    margin-top: 5rem !important;
-  }
-  .work-section-bottom {
-    margin-top: 1rem !important;
-  }
-  .contact-form-container {
-    padding: 0.5rem !important;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 1rem !important;
-  }
-  .contact-form-container input {
-    font-size: 1rem !important;
-    max-width: 100%;
-    padding: 0.5rem 1rem !important;
-    margin-bottom: 0.8rem !important;
-    text-align: center;
-  }
-  .footer-wrapper {
-    flex-direction: column;
-  }
-  .footer-section-two {
-    flex-direction: column;
-    margin-top: 2rem;
-  }
-  .footer-section-columns {
-    margin: 1rem 0rem;
+  .home-bannerImage-container,
+  .about-background-image-container {
+    display: none;
   }
   .App {
     max-width: 95vw;
@@ -337,4 +303,9 @@ body {
 .section-principal-category {
   display: flex;
   justify-content: space-between;
+}
+
+.category.active {
+  background-color: rgb(100, 150, 200);
+  color: white;
 }
