--- a/FRONT/src/styles/card.css
+++ b/FRONT/src/styles/card.css
@@ -1,5 +1,5 @@
 .card {
-  width: 277px;
+  width: 250px;
   border: 1px solid #ddd;
   border-radius: 12px;
   overflow: hidden;
@@ -7,11 +7,13 @@
   background-color: rgb(226, 232, 240);
    display: flex;
   flex-direction: column;
+  flex: 1 1 250px;
+  max-width: 269px;
 }
 
 .card-image {
   position: relative;
-  height: 300px;
+  height: 200px;
   overflow: hidden;
   background-color: #fff;
 }
@@ -70,7 +72,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
-  justify-content: center;
+  justify-content: start;
   /* padding: 16px; */
 }
 
