--- a/FRONT/src/styles/home.css
+++ b/FRONT/src/styles/home.css
@@ -1,9 +1,9 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Reem Kufi", sans-serif !important;
-}
+} */
 
 img {
   max-width: 100%;
