--- a/FRONT/src/styles/card.css
+++ b/FRONT/src/styles/card.css
@@ -11,6 +11,10 @@
   max-width: 269px;
 }
 
+.card:hover {
+
+}
+
 .card-image {
   position: relative;
   height: 200px;
@@ -89,4 +93,43 @@
   font-size: 24px;
   font-weight: 500;
   color: #000;
+}
+
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-100%);
+  transition: transform 0.4s ease-in-out;
+  z-index: 2;
+}
+
+.buy-button {
+  padding: 0.6rem 1.5rem;
+  background-color: #9c5698;
+  border: none;
+  border-radius: 2rem;
+  font-weight: 600;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  color: white;
+}
+
+.buy-button:hover {
+  background-color: #7a3e6b;
+}
+
+.card:hover .image-overlay {
+  transform: translateY(0%);
+}
+
+.card:hover .title {
+  color: #9c5698;
 }
