Cambiando color de botones

--- a/FRONT/src/pages/MisDirecciones/misDirecciones.css
+++ b/FRONT/src/pages/MisDirecciones/misDirecciones.css
@@ -8,11 +8,11 @@
 }
 
 .btn-danger {
-  background-color: #ff0055;
+  background-color: #9C5698;
   border: none;
   font-weight: bold;
 }
 
 .btn-danger:hover {
-  background-color: #e6004c;
+  background-color: #CA98C7;
 }
