--- a/FRONT/src/styles/card.css
+++ b/FRONT/src/styles/card.css
@@ -73,7 +73,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
-  justify-content: start;
+  justify-content: center;
   /* padding: 16px; */
 }
 
