--- a/FRONT/src/styles/comercio.css
+++ b/FRONT/src/styles/comercio.css
@@ -4,12 +4,14 @@
   justify-content: start;
   align-items: center; /* centrado vertical */
   color: white;
-  height: 40vh;
+  height: 50vh;
   padding: 0.5rem;
   background-color: #333;
   background-size: cover;
   background-repeat: no-repeat;
-  box-shadow: inset 0 -100px 100px rgba(0, 0, 0, 0.8);
+  background-position: center;
+  /* background-attachment:initial; */
+  box-shadow: inset 0 -100px 100px rgba(0, 0, 0, 0.4);
   padding-left: 2rem;
   padding-bottom: 1rem;
 }
@@ -21,7 +23,7 @@
   background: linear-gradient(
     to bottom,
     rgba(0, 0, 0, 0.2),
-    rgba(0, 0, 0, 0.9)
+    rgba(0, 0, 0, 0.6)
   );
   z-index: 1;
 }
