--- a/FRONT/src/styles/RegisterForm.css
+++ b/FRONT/src/styles/RegisterForm.css
@@ -1,5 +1,6 @@
 .registro-form {
   max-width: 400px;
+  margin-top: 100px !important;
   margin: 50px auto;
   padding: 20px;
   border-radius: 8px;
