--- a/FRONT/src/styles/card.css
+++ b/FRONT/src/styles/card.css
@@ -1,5 +1,11 @@
 .card {
   width: 250px;
+  max-width: 269px;
+  min-height: 400px;
+  max-height: 400px;
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 250px;
   border: 1px solid #ddd;
   border-radius: 12px;
   overflow: hidden;
@@ -9,6 +15,7 @@
 
 .card-image {
   position: relative;
+  min-height: 200px;
   height: 200px;
   overflow: hidden;
   background-color: #fff;
@@ -41,12 +48,10 @@
 }
 
 .card-content {
-  
-    display: flex;
-  gap: 15px;
-  flex: 1;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
+  flex: 1;
   padding: 12px;
   gap: 15px;
 }
@@ -68,7 +73,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 16px;
-  justify-content: start;
+  justify-content: center;
   /* padding: 16px; */
 }
 
@@ -77,8 +82,7 @@
   justify-content: space-between;
   align-self: end;
   font-weight: 500;
-    margin-top: auto; 
-
+  margin-top: auto;
 }
 
 .price {
