Creando componente MiPerfil

--- a/FRONT/src/styles/navbar.css
+++ b/FRONT/src/styles/navbar.css
@@ -120,5 +120,11 @@
   color: #000;
 }
 
+.chevron-rotate {
+  transition: transform 0.3s ease;
+}
 
+.chevron-rotate.open {
+  transform: rotate(180deg);
+}
 
