--- a/FRONT/src/pages/MisDirecciones/misDirecciones.css
+++ b/FRONT/src/pages/MisDirecciones/misDirecciones.css
@@ -16,3 +16,32 @@
 .btn-danger:hover {
   background-color: #CA98C7;
 }
+.card-horizontal {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  margin-bottom: 0.5rem;
+
+  /* Opcional: ancho máximo y sombra */
+  max-width: 1000px;
+  box-shadow: 0 10px 12px rgba(232, 12, 12, 0.1);
+  border-radius: 12px;
+}
+.card-horizontal > div {
+  flex-shrink: 0;
+}
+.card-horizontal .etiqueta {
+  font-weight: bold;
+  min-width: 100px;
+}
+.card-horizontal .direccion {
+  flex-grow: 1;
+}
+.card-horizontal .telefono,
+.card-horizontal .referencias {
+  min-width: 120px;
+  font-size: 0.9rem;
+  color: #555;
+}
