agregando estilos y modificando dashboard vendedor

--- a/FRONT/src/pages/MisDirecciones/misDirecciones.css
+++ b/FRONT/src/pages/MisDirecciones/misDirecciones.css
@@ -7,7 +7,7 @@
   box-shadow: 0 4px 20px  #56649C;
 }
 
-.btn-danger {
+/* .btn-danger {
   background-color: #9C5698;
   border: none;
   font-weight: bold;
@@ -15,4 +15,4 @@
 
 .btn-danger:hover {
   background-color: #CA98C7;
-}
+} */
