--- a/FRONT/src/styles/MisPedidos.css
+++ b/FRONT/src/styles/MisPedidos.css
@@ -2,7 +2,7 @@
   animation: fadeIn 0.5s ease-in-out;
 }
 
-h2 {
+.tus-pedidos {
   font-size: 2.2rem;
   font-weight: bold;
   color: #5a2e58;
@@ -38,9 +38,9 @@ h2 {
   color: #5a2e58;
 }
 
-.text-center {
+.tus-pedidos-title {
   color: #6c3e67;
-  font-size: 1.1rem;
+  font-size: 2.1rem;
 }
 
 @keyframes fadeIn {
