--- a/FRONT/src/styles/home.css
+++ b/FRONT/src/styles/home.css
@@ -46,7 +46,7 @@ body {
   margin-top: 3.5rem !important;
   position: relative;
   display: flex;
-  padding-top: 3rem;
+  /* margin-top: 3rem; */
   /* min-height: 100vh; */
   width: 85vw;
   max-width: 1900px;
@@ -186,6 +186,9 @@ body {
   }
   .home-bannerImage-container {
     max-width: 600px;
+  }
+  .home-banner-container {
+    padding-top: 3rem;
   }
 }
 @media (max-width: 800px) {
